--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="app.js" defer></script>
-    <title>Quiz</title>
-</head>
-<body>
-    <div class="players"></div>
-    <div class="quiz">
-        <div class="container">
-            <div id="timer"></div>
-            <div id="qs"></div>
-        </div>
-        <div class="ans">
-            <div>
-                <div class="box">
-                    <div class="letter"><p>A</p></div>
-                    <h3 id="q1"></h3>
-                </div>
-                <div class="box">
-                    <div class="letter"><p>B</p></div>
-                    <h3 id="q2"></h3>
-                </div>
-            </div>
-            <div>
-                <div class="box">
-                    <div class="letter"><p>C</p></div>
-                    <h3 id="q3"></h3>
-                </div>
-                <div class="box">
-                    <div class="letter"><p>D</p></div>
-                    <h3 id="q4"></h3>
-                </div>
-            </div>
-        </div>
+    <link rel="stylesheet" href="room.css">
+    <script src="/socket.io/socket.io.js"></script>
+    <title>rooms</title>
+  </head>
+  <body>
+    <div class="container">
+        <header>
+            <input type="search" placeholder="search..." />
+            <button class="btn" id="createRoom">Create room</button>
+            <button class="btn" id="joinPrivRoom">Enter private room</button>
+        </header>
+        <hr/>
+      <main>
+        <button id="refresh">Refresh</button>
+        <ul id="rooms">
+        </ul>
+      </main>
     </div>
-</body>
+
+    <script src="rooms.js"></script>
+  </body>
 </html>
